# jsk_aerial_robot

./: .gitignore  README.md
aerial_robot_base/: package.xml
aerial_robot_base/launch/external_module/: mocap.launch
aerial_robot_control/src/: flight_navigation.cpp
aerial_robot_simulation/launch/: gazebo.launch
robots/mini_quadrotor/: package.xml
robots/mini_quadrotor/camera_info/720P/: ost.yaml
robots/mini_quadrotor/config/: FlightControl.yaml  NavigationConfig.yaml
robots/mini_quadrotor/launch/: bringup.launch  continuous_detection.launch  usb_cam-test.launch
robots/mini_quadrotor/scripts/: Aprialtag_landing_demo.py  Aprialtag_landing_demo_firststep.py  Aprialtag_landing_demo_secondstep.py  Door.py  Picture_generate.py  Test-102302.py  aprialtag_landing_demo.py  aprialtag_landing_demo_1102.py  chessboard_generate.py
robots/mini_quadrotor/urdf/: robot.gazebo.xacro  robot.urdf.xacro
robots/xuanwu/: CMakeLists.txt  package.xml
robots/xuanwu/config/: 22.2v_motor_test_1735219956.txt  23.2v_motor_test_1735219676.txt  24.2v_motor_test_1735219022.txt  25.2v_motor_test_1735215308.txt  Battery.yaml  MotorInfo.yaml  NavigationConfig.yaml  ServoInfo.yaml  rviz_config
robots/xuanwu/config/apriltag/xuanwu_bricks/: tags.yaml  tags_bundle.yaml
robots/xuanwu/config/camera_info/elp-l180/720p/aerial_robot/kalibr/: april_6x8.yaml
robots/xuanwu/config/camera_info/elp-l180/720p/aerial_robot/kalibr/1/: 2025-05-26-21-31-33-results-cam.txt  kalibr_ost.yaml  ost.yaml
robots/xuanwu/config/camera_info/elp-l180/720p/aerial_robot/kalibr/2/: 2025-05-26-21-39-57-results-cam.txt  kalibr_ost.yaml  ost.yaml
robots/xuanwu/launch/: bringup.launch
robots/xuanwu/launch/includes/: aerial_camera_apriltag.launch  sensors.launch.xml
robots/xuanwu/urdf/: robot.gazebo.xacro  robot.urdf.xacro
robots/xuanwu/urdf/mesh/: 8_inch_prop_ccw.dae  8_inch_prop_cw.dae
(+33 files in other folders)
